@@ -1,6 +1,15 @@
 2018-03-23  Youenn Fablet  <youenn@apple.com>
 
         Add support for VCP encoder on MacOS and iOS
+        Build fix.
+
+        Unreviewed.
+
+        * Source/webrtc/sdk/WebKit/VideoProcessingSoftLink.cpp:
+
+2018-03-23  Youenn Fablet  <youenn@apple.com>
+
+        Add support for VCP encoder on MacOS and iOS
         https://bugs.webkit.org/show_bug.cgi?id=183924
 
         Reviewed by Eric Carlson.
